--- a/developers/skale-bridge/ethereum/bridge-erc20.mdx
+++ b/developers/skale-bridge/ethereum/bridge-erc20.mdx
@@ -29,16 +29,16 @@ bridging layer:
 1. Have a **mint** function that is locked down to the IMA Bridge
 2. Have a **burn** function that is locked down to the IMA Bridge
 
-<Aside type="danger" title="Caution on Minting">
+<Danger type="danger" title="Caution on Minting">
 If the mint function is not locked down to just the IMA Bridge, specifically TokenManagerERC20; there is a chance that
 the supply on the SKALE Chain side could be larger than what is actually deposited in the bridge.
-</Aside>
+</Danger>
 
-<Aside type="danger" title="Caution on Burning">
+<Danger type="danger" title="Caution on Burning">
 If the burn function is not locked down to just the IMA Bridge, specifically TokenManagerERC20; there is a chance that
 the supply on the SKALE Chain side could be "burned", while the tokens still exist on Ethereum which could later be withdrawn under
 certain circumstances. It is recommended that explicit burns on a SKALE Chain should be avoided for bridged tokens.
-</Aside>
+</Danger>
 
 The following is the base interchain token code that meets the above bridging requirements for IMA. It is not recommended to use this directly, but to use a wrapper. See InterchainSKL for an 18 decimal example and InterchainUSDT for a 6 decimal example.
 
@@ -89,7 +89,8 @@ contract InterchainERC20 is ERC20, AccessControl {
 
 Utilize your preferred tooling i.e [Foundry](https://getfoundry.sh), [Hardhat](https://hardhat.org), [Remix](https://remix.ethereum.org/#lang=en&optimize=false&runs=200&evmVersion=paris&version=soljson-v0.8.19+commit.7dd6d404.js), etc. to deploy your IMA compatible ERC-20 token to the SKALE Chain you want to be able to bridge assets too.
 
-  ## InterchainSKL.sol
+<Tabs>
+  <Tab title="InterchainSKL.sol">
     *This is an example of an 18 decimal ERC-20 token that would be deployed on SKALE*
     ```solidity
     // SPDX-License-Identifier: MIT
@@ -99,8 +100,8 @@ Utilize your preferred tooling i.e [Foundry](https://getfoundry.sh), [Hardhat](h
 
     contract InterchainSKL is InterchainERC20("Skale Token", "SKL") {}
     ```
-  
-  ## InterchainUSDT.sol
+  </Tab>
+  <Tab title="InterchainUSDT.sol">
     *This is an example of an 6 decimal ERC-20 token that would be deployed on SKALE*
     ```solidity
     // SPDX-License-Identifier: MIT
@@ -114,15 +115,17 @@ Utilize your preferred tooling i.e [Foundry](https://getfoundry.sh), [Hardhat](h
     	}
     }
     ```
+    </Tab>
+</Tabs>
   
 
 > *InterchainERC20.sol is inherited from the code above*
 
 ### 3. Map the SKALE and Ethereum tokens together
 
-<Aside type="note">
+<Note type="note">
 If you are trying to setup a token on SKALE in a production environment please join us in [Discord](https://discord.gg/skale) for support!
-</Aside>
+</Note>
 
 #### Add the token on Ethereum via SAFE
 
@@ -130,17 +133,19 @@ Start by visiting your SAFE via the official SAFE website or your preferred tool
 
 Once on your SAFE, start by preparing a transaction via the **Transaction Builder** and follow the screenshots below, which will use Europa Testnet and the SKL token as en example for the mapping.
 
-<Aside type="warning">
+<Warning type="warning">
 Make sure to replace the values with your SKALE Chain name and the correct token addresses.
-</Aside>
+</Warning>
 
 #### Add the token on SKALE Chain TokenManagerERC20
 
-  ## Multisigwallet CLI
+<Tabs>
+  <Tab title="Multisigwallet CLI">
     ```shell
     npx msig encodeData [SKALE_CHAIN_NAME] TokenManagerERC20 addERC20TokenByOwner Mainnet 0x[TOKEN_ON_ETHEREUM] 0x[TOKEN_ON_SKALE_CHAIN]
     ```
-
+  </Tab>
+</Tabs>
     After this, execute by following the steps on [Using SAFE](/developers/run-a-skale-chain/using-safe#submit-transaction-to-safe)
   
 
@@ -164,12 +169,13 @@ The flow for bridging an ERC-20 from Ethereum to SKALE follows a very similar fl
 
 ### Bridge to SKALE (from Ethereum)
 
-<Aside type="note">
+<Note type="note">
 A normal ERC-20 deposit will result in tokens being delivered to the same wallet on SKALE.
 A direct ERC-20 deposit will result in tokens being delivered to the specified wallet on SKALE.
-</Aside>
+</Note>
 
-  ## bridge.js
+<Tabs>
+  <Tab title="bridge.js">
     ```js
     import { Contract, JsonRpcProvider, Wallet, parseEther } from "ethers"; // npm add ethers
 
@@ -203,8 +209,8 @@ A direct ERC-20 deposit will result in tokens being delivered to the specified w
     // Success! Now watch for delivery on SKALE Chain
     console.log("Success!");
     ```
-  
-  ## bridgeDirect.js
+  </Tab>
+  <Tab title = "bridgeDirect.js">
     ```js
     import { Contract, JsonRpcProvider, Wallet, parseEther } from "ethers"; // npm add ethers
 
@@ -239,7 +245,8 @@ A direct ERC-20 deposit will result in tokens being delivered to the specified w
     // Success! Now watch for delivery on SKALE Chain
     console.log("Success!");
     ```
-  
+    </Tab>
+</Tabs>
 
 ### Bridge to Ethereum (from SKALE)
 
@@ -249,9 +256,9 @@ SKALE's decentralized bridge offers a simple two-step process to bridge from any
 
 2. The second step is to initiate the bridge (technically known as an exit) on the SKALE Chain
 
-<Aside type="note">
+<Note type="note">
 Gas Wallet, officially referred to as the community pool, is a smart contract on Ethereum that is used to handle exits from SKALE. Users pre-pay ETH into this contract which is then used to reimburse validators for the gas costs of the bridge cost back to Ethereum. Make sure users top up their gas wallet to ensure the bridge can succeed.
-</Aside>
+</Note>
 
 #### Pre-pay for your Exit
 
@@ -328,7 +335,7 @@ await exitTx.wait(1);
 console.log("Success!");
 ```
 
-<Aside type="note">
+<Note type="note">
 If your bridge is not working, it is most likely for one of three reasons:
 
 1. You forgot to prepay for gas
@@ -336,4 +343,4 @@ If your bridge is not working, it is most likely for one of three reasons:
 3. You don't have sufficient funds to bridge
 
 Still having issues? Join us in [Discord](https://discord.gg/skale) for support!
-</Aside>
+</Note>
