--- a/developers/skale-bridge/messaging-layer/using-custom-contracts.mdx
+++ b/developers/skale-bridge/messaging-layer/using-custom-contracts.mdx
@@ -14,7 +14,8 @@ Having trouble setting up or using your custom IMA connected contracts?
 Join the team in [Discord](https://discord.gg/skale) for suppport!
 </Note>
 
-	## Ethers v6
+<Tabs>
+	<Tab title="Ethers v6">
 		```ts
 		/**
 		* Run:
@@ -51,5 +52,7 @@ Join the team in [Discord](https://discord.gg/skale) for suppport!
 			await new Promise(res => setTimeout(res, 2000)); // Sleep 2 seconds
 		}
 		```
+	</Tab>
+</Tabs>
 	
 
