Finalize SKL Token and SKL Staking Page

--- a/get-started/skl-token/skl-token.mdx
+++ b/get-started/skl-token/skl-token.mdx
@@ -5,8 +5,8 @@ description: A conceptual overview and introduction into the SKL Token
 
 The SKL token is the utility token of the SKALE Network. It is deployed on Ethereum as an ERC-777 hybrid utility and supports the following functions:
 
-- Delegate SKL tokens to validators which are then staked into the delegated proof of stake SKALE Network
-- Stake SKL tokens as a validator to run a SKALE Supernode
+- Allows delegation of SKL tokens to validators who then stake the tokens into a node to provide economical collateral for the Proof of Stake (PoS) network.
+- Validators stake SKL tokens run and secure SKALE Supernodes
 - Pay for SKALE Chains in accordance with SKALE Network's economic model
 - Participate in SKALE Network governance via the SKALE DAO for those who are actively delegated to a validator
 
@@ -14,7 +14,7 @@ The SKL token is the utility token of the SKALE Network. It is deployed on Ether
 SKL is NOT the native gas token of SKALE Chains. Unlike other chains where the native token holds economic value in order to pay for gas fees, SKALE Chains use a token with no economic value called sFUEL which enables zero-gas cost transactions. The SKL token is activley bridged to SKALE Chains in ERC-20 format.
 </Note>
 
-The SKL token is native to Ethereum, but available across multiple chains. The following are the official deployments: 
+The SKL token is native to Ethereum, but available across multiple chains. The following are the official deployments:
 
 | Chain | Address | Notes |
 | - | - | - |
