Fix SKALE Base Closing Tag

--- a/get-started/quick-start/skale-on-base.mdx
+++ b/get-started/quick-start/skale-on-base.mdx
@@ -5,7 +5,7 @@ tag: "NEW"
 ---
 
 <Note>
-The first SKALE Chain is publicly available on [testnet](#skale-base-testnet) and in private beta on [mainnet]()
+The first SKALE Chain is publicly available on [testnet](#skale-base-testnet) and in private beta on [mainnet](##skale-base-mainnet)
 </Note>
 
 ## Key Features
@@ -20,7 +20,7 @@ The SKALE on Base testnet deployment retains 100% of the features you know and l
 
 <Note>
 If you are looking to host your agent card with SKALE File Storage or have your own dedicated blockchain, join the team in [Discord](https://discord.gg/skale) to inquire.
-<Note>
+</Note>
 
 ## SKALE Base Mainnet
 
